zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_after_first_character.snap
---
source: zeta-code/tui/src/app/fullscreen/home_tests.rs
expression: rendered
---
  ≡ .                                                                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ⏸ ask permissions on                                                          
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ > x                                                                      │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  / commands
