zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_narrow.snap
---
source: zeta-code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 40, 16))"
---
  ≡ .                                   
                                        
  ╭──────────────────────────────────╮  
  │                                  │  
  │  Zeta Code v0.1.0                │  
  │  Manage sessions                 │  
  │  Settings                        │  
  │  Help and shortcuts              │  
  │> Quit                            │  
  ╰──────────────────────────────────╯  
  ⏸ ask permissions on                  
  ╭──────────────────────────────────╮  
  │ > Build anything                 │  
  ╰──────────────── Automatic model ─╯  
                                        
  Enter select · Esc input
