zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_restored_by_slash_command.snap
---
source: zeta-code/tui/src/app/fullscreen/home_tests.rs
expression: rendered
---
  ≡ .                       [+]                            [— / —] [Dashboard]  
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │                                                                          │  
  │    ▄  ▄      Zeta Code v0.1.0                                            │  
  │  ▗█▛██▜█▖                                                                │  
  │  ▝▜████▛▘    Start a task below, or continue a previous session.         │  
  │    ▝  ▘                                                                  │  
  │              Resume session                                              │  
  │              Dashboard                                                   │  
  │              Settings                                                    │  
  │              Help and shortcuts                                          │  
  │              Quit                                                        │  
  │                                                                          │  
  ╰──────────────────────────────────────────────────────────────────────────╯  
                                                                                
                                                                                
                                                                                
  ⏸ ask permissions on              Type a new task · Tab actions · Esc return  
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ >                                                                        │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  Tab actions  ·  / commands
