zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_short.snap
---
source: zeta-code/tui/src/app/fullscreen/home_tests.rs
expression: text(&buffer)
---
  ≡ .               [+]    [Dashboard]  
                                        
  ╭──────────────────────────────────╮  
  │  Zeta Code v0.1.0                │  
  │> Quit                            │  
  ╰──────────────────────────────────╯  
  ⏸ ask permissions on                  
  ╭──────────────────────────────────╮  
  │ > Build anything                 │  
  ╰──────────────── Automatic model ─╯  
                                        
  Enter select · Esc input
