zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_submission_failed.snap
---
source: zeta-code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  ≡ .                       [+]                            [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  Could not create session                                                      
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ > [Pasted Content 1500 chars]                                            │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  / commands
